# todo-list-api

./: .env  .env.example  .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 33b2db27e334_initial_tables.py
app/: main.py
app/api/: deps.py  endpoints.py
app/api/routers/: auth.py  todos.py  users.py
app/core/: config.py  db.py  security.py
app/crud/: todo.py  user.py
app/models/db/: models.py  todo.py  user.py
app/models/schemas/: jwt_token.py  todo.py  user.py
app/tests/: conftest.py  test_main.py
app/utilities/exceptions/: access.py  database.py  password.py
app/utilities/exceptions/http/: exc_400.py  exc_403.py  exc_404.py
app/utilities/messages/: exc_details.py
migrations/: env.py
migrations/versions/: 29e37f9de959_initial_tables.py  33b2db27e334_initial_tables.py
tests/: test_main.py
