[tool.poetry]
name = "todo-list-api"
version = "0.1.0"
description = ""
authors = ["sxw111"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "^0.111.0", extras = ["all"]}
uvicorn = {version = "^0.30.1", extras = ["standart"]}
sqlalchemy = {version = "^2.0.31", extras = ["asyncio"]}
alembic = "^1.13.2"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
