[tool.poetry]
name = "todo-list-api"
version = "0.0.1"
description = "Todo list api"
authors = ["sxw111"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "^0.111.0", extras = ["all"]}
uvicorn = {version = "^0.30.1", extras = ["standart"]}
sqlalchemy = {version = "^2.0.31", extras = ["asyncio"]}
alembic = "^1.13.2"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
asyncpg = "^0.29.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
asgi-lifespan = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.1"
flake8 = "^7.1.0"
types-python-jose = "^3.3.4.20240106"
types-passlib = "^1.7.7.20240327"
pre-commit = "^3.7.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
color=true
exclude = '''
    /(
        \.git
        | \.mypy_cache
        | \.venv
        | alembic/versions
    )/
'''
include = '\.pyi?$'
line-length = 88